--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
 }
 
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
